<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <TextView
        android:id="@+id/damage_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/radioGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:checkedButton="@id/None"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints">

        <RadioButton
            android:id="@+id/None"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:text="@string/none_radio_button_text" />

        <RadioButton
            android:id="@+id/Vulnerability"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/vulnerability_radio_button_text"/>

        <RadioButton
            android:id="@+id/Resistance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:text="@string/resistance_radio_button_text"/>

        <RadioButton
            android:id="@+id/immunity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:minWidth="48dp"
            android:text="@string/Immunity_radio_button_text" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>