<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4A6572"
    tools:context=".MainActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:textColor="#ffff"
        android:text="@string/home_page"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/Fight_button"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.279" />

    <Button
        android:id="@+id/Fight_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/fight_button"
        android:backgroundTint="#0336FF"
        app:layout_constraintBottom_toTopOf="@+id/monsters_codex_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.563"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="@color/black" />

    <Button
        android:id="@+id/monsters_codex_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/monsters_db_button"
        android:backgroundTint="#0336FF"
        app:layout_constraintBottom_toTopOf="@+id/logs_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.563"
        app:layout_constraintStart_toStartOf="parent"
        app:rippleColor="#E81111" />

    <Button
        android:id="@+id/button4"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="232dp"
        android:text="@string/Clear_logs_button"
        android:backgroundTint="#0336FF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.563"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/logs_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/logs_button"
        android:backgroundTint="#0336FF"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.563"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>