<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".monsterdataScreen.MonsterDetails">

    <!-- Title -->
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/update_monsters_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Monster Name EditText -->
    <EditText
        android:id="@+id/monster_name_text_field_here"
        android:layout_width="250dp"
        android:layout_height="52dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/monster_name_hint"
        android:inputType="textPersonName"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.248"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <!-- Monster HP EditText -->
    <EditText
        android:id="@+id/monster_hp_text_field_here"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/monster_hp_hint"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.199"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/monster_name_text_field_here" />

    <!-- RecyclerView for Damage Types -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_here"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/monster_hp_text_field_here"
        app:layout_constraintBottom_toTopOf="@+id/save_button1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:listitem="@layout/monster_details_to_change"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        />

    <!-- Save Button -->
    <Button
        android:id="@+id/save_button1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/save_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/delete_button"
        app:layout_constraintTop_toBottomOf="@+id/recyclerView_here"
        app:layout_constraintBottom_toBottomOf="parent" />

    <!-- Delete Button -->
    <Button
        android:id="@+id/delete_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="60dp"
        android:text="@string/delete_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/save_button1"
        app:layout_constraintTop_toBottomOf="@+id/recyclerView_here"
        app:layout_constraintVertical_bias="0.517" />
</androidx.constraintlayout.widget.ConstraintLayout>